changed font for blog post list title
Signed-off-by: gangmuk <gangmuk@gmail.com>

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -34,7 +34,8 @@
 
   .blog-post-title {
     font-size: 17px;
-    font-weight: 400;
+    font-weight: 500;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', cursive, sans-serif;
     letter-spacing: normal;
     line-height: 1.4;
     flex: 1;
