--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -53,22 +53,41 @@
             {% for post in site.posts %}
 
               {% if post.draft != true %}
-                <div class="blog-post-item">
-                  <div class="blog-post-header">
-                    <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
-                    <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
-                      {{ post.title }}
-                    </a>
-                  </div>
-                  {% if post.tags %}
-                    <div class="blog-post-tags">
-                      {% for tag in post.tags %}
-                        <span class="blog-tag blog-tag-{{ tag | slugify }}">{{ tag }}</span>
-                      {% endfor %}
+                {% if page.category_filter %}
+                  {% if post.category == page.category_filter %}
+                    <div class="blog-post-item">
+                      <div class="blog-post-header">
+                        <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
+                        <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
+                          {{ post.title }}
+                        </a>
+                      </div>
+                      {% if post.tags %}
+                        <div class="blog-post-tags">
+                          {% for tag in post.tags %}
+                            <span class="blog-tag blog-tag-{{ tag | slugify }}">{{ tag }}</span>
+                          {% endfor %}
+                        </div>
+                      {% endif %}
                     </div>
                   {% endif %}
-                </div>
-
+                {% else %}
+                  <div class="blog-post-item">
+                    <div class="blog-post-header">
+                      <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
+                      <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
+                        {{ post.title }}
+                      </a>
+                    </div>
+                    {% if post.tags %}
+                      <div class="blog-post-tags">
+                        {% for tag in post.tags %}
+                          <span class="blog-tag blog-tag-{{ tag | slugify }}">{{ tag }}</span>
+                        {% endfor %}
+                      </div>
+                    {% endif %}
+                  </div>
+                {% endif %}
               {% endif %}
 
             {% endfor %}
